Wylaczone Content-Security-Policy

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,7 +102,8 @@ play.mailer {
 # *.xing.com
 # frame-src
 # clef.io
-play.filters.headers.contentSecurityPolicy="default-src 'self'; img-src *; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com cdnjs.cloudflare.com fonts.googleapis.com cdn.datatables.net; font-src 'self' maxcdn.bootstrapcdn.com cdnjs.cloudflare.com fonts.gstatic.com; script-src 'self' 'unsafe-inline' code.jquery.com maxcdn.bootstrapcdn.com cdnjs.cloudflare.com cdn.datatables.net;"
+# play.filters.headers.contentSecurityPolicy="default-src 'self'; img-src *; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com cdnjs.cloudflare.com fonts.googleapis.com cdn.datatables.net; font-src 'self' maxcdn.bootstrapcdn.com cdnjs.cloudflare.com fonts.gstatic.com; script-src 'self' 'unsafe-inline' code.jquery.com maxcdn.bootstrapcdn.com cdnjs.cloudflare.com cdn.datatables.net;"
+play.filters.headers.contentSecurityPolicy="default-src 'self'; img-src *; style-src 'self' 'unsafe-inline' *; font-src 'self' *; script-src 'self' 'unsafe-inline' *;"
 
 play.http.filters = "utils.Filters"
 play.http.errorHandler = "utils.ErrorHandler"
